--- a/views/index.hbs
+++ b/views/index.hbs
@@ -33,10 +33,10 @@
         Create your own lens right now!
       </div>
       <div id='create-lens-button'>
-        <div>
+        <div id='create-lens-add-sym'>
           +
         </div>
-        <div>
+        <div id='create-lens-button-text'>
           Create a lens
         </div>
       </div>
