front page ready to show case the latest graphs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,45 +1,55 @@
-<div id='expn-cont'>
-  <div id='header'>
-    <div id='logo-cont'>
-      <div id='logo-graphic'>
-      </div>
-      <div id='logo-text'>
-        Lenses
-      </div>
+<div id='header'>
+  <div id='logo-cont'>
+    <div id='logo-graphic'>
     </div>
-    <div id='expn-text'>
-      Lenses enables the rapid creation of sophisticated data visualizations and interactive graphics.
-      No knowledge of programming is required to get started but the toolkit can be extended and completely customized by developers using HTML and Javascript.
+    <div id='logo-text'>
+      Lenses
     </div>
-    <div id='expn-button-cont'>
-      <div class='expn-buttons'>
-        <div class='expn-icon' id='exp-gear'>
-        </div>
-        <a href="#" class='expn-link'>How does it work?</a>
+  </div>
+  <div id='expn-text'>
+    Lenses enables the rapid creation of sophisticated data visualizations and interactive graphics.
+    No knowledge of programming is required to get started but the toolkit can be extended and completely customized by developers using HTML and Javascript.
+  </div>
+  <div id='expn-button-cont'>
+    <div class='expn-buttons'>
+      <div class='expn-icon' id='exp-gear'>
       </div>
-      <div class='expn-buttons'>
-        <div class='expn-icon' id='exp-info'>
-        </div>
-        <a href="#" class='expn-link'>Why did we build this?</a>
-      </div>
-      <div class='expn-buttons'>
-        <div class='expn-icon' id='exp-puzzle'>
-        </div>
-        <a href="#" class='expn-link'>How can I contribute?</a>
-      </div>
+      <a href="#" class='expn-link'>How does it work?</a>
     </div>
-    <div id='create-lens-cont'>
-      <div id='create-lens-text'>
-        Create your own lens right now!
+    <div class='expn-buttons'>
+      <div class='expn-icon' id='exp-info'>
       </div>
-      <div id='create-lens-button'>
-        <div id='create-lens-add-sym'>
-          +
-        </div>
-        <div id='create-lens-button-text'>
-          Create a lens
-        </div>
+      <a href="#" class='expn-link'>Why did we build this?</a>
+    </div>
+    <div class='expn-buttons'>
+      <div class='expn-icon' id='exp-puzzle'>
+      </div>
+      <a href="#" class='expn-link'>How can I contribute?</a>
+    </div>
+  </div>
+  <div id='create-lens-cont'>
+    <div id='create-lens-text'>
+      Create your own lens right now!
+    </div>
+    <div id='create-lens-button'>
+      <div id='create-lens-add-sym'>
+        +
+      </div>
+      <div id='create-lens-button-text'>
+        Create a lens
       </div>
     </div>
   </div>
+</div>
+<div id='viz-cont'>
+  <div id='viz-explanation'>
+    Lenses Show Case
+  </div>
+</div>
+<div id='footer'>
+  <ul id='footer-items'>
+    <li class='footer-item'>About</li>
+    <li class='footer-item'>Team</li>
+    <li class='footer-item'>Privacy</li>
+  </ul>
 </div>
