--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0px;
+}
+
 a {
   font-family: AktivGrotesk-Light;
   font-size: 20px;
@@ -35,11 +39,6 @@ a {
 
 #logo-text {
   text-align: center;
-}
-
-#expn-cont {
-  width: 100%;
-  background-color: #ffffff;
 }
 
 #expn-text {
@@ -107,6 +106,7 @@ a {
 #create-lens-cont {
   border-top: 1px solid rgba(151, 151, 151, 0.31);
   padding-top: 30px;
+  overflow: hidden;
 }
 
 #create-lens-text {
@@ -143,4 +143,34 @@ a {
   display: inline-block;
   margin-left: 100px;
   line-height: 3;
+}
+
+#viz-cont {
+  background-color: #F7F7F7;
+  margin: 28px 0px 0px 0px;
+  padding: 0px 50px;
+}
+
+#footer {
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  background-color: #ffffff;
+  width: 100%;
+  height: 50px;
+}
+
+#footer-items {
+  text-align: center;
+  list-style: none;
+}
+
+.footer-item {
+  display: inline-block;
+  opacity: 0.72;
+  font-family: LucidaGrandeUI;
+  font-size: 18px;
+  color: #000000;
+  line-height: 21px;
+  padding: 0px 100px;
 }
