--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,5 +1,8 @@
 @import "compass/css3";
 
+body {
+  margin:0px;
+}
 a {
   font-family: AktivGrotesk-Light;
   font-size: 20px;
@@ -37,11 +40,6 @@ a {
 
 #logo-text {
   text-align:center;
-}
-
-#expn-cont {
-  width:100%;
-  background-color:#ffffff;
 }
 
 #expn-text {
@@ -109,6 +107,7 @@ a {
 #create-lens-cont {
   border-top:1px solid rgba(151, 151, 151, 0.31);
   padding-top:30px;
+  overflow:hidden;
 }
 
 #create-lens-text {
@@ -145,6 +144,33 @@ a {
   display:inline-block;
   margin-left:100px;
   line-height:3;
+}
+
+#viz-cont {
+  background-color: #F7F7F7;
+  margin:28px 0px 0px 0px;
+  padding:0px 50px;
+}
+#footer {
+  position:fixed;
+  left:0px;
+  bottom:0px;
+  background-color:#ffffff;
+  width:100%;
+  height:100px;
+}
+#footer-items {
+  text-align:center;
+  list-style:none;
+}
+.footer-item {
+  display:inline-block;
+  opacity: 0.72;
+  font-family: LucidaGrandeUI;
+  font-size: 18px;
+  color: #000000;
+  line-height: 21px;
+  padding: 0px 100px;
 }
 
 
