top section is complete

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -45,6 +45,16 @@
   <div id='viz-explanation'>
     Lenses Show Case
   </div>
+  <div class='viz'>
+    <div class='viz-name'>
+      Sample Name
+    </div>
+    <div class='viz-author'>
+      Kareem
+    </div>
+    <div class='viz-graph'>
+    </div>
+  </div>
 </div>
 <div id='footer'>
   <ul id='footer-items'>
