--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,14 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    
+    <!-- Load Web Components Polyfill --> 
+    <script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
+
+    <!-- Load Lens Composer Components--> 
+    <link rel="import" href="/bower_components/lens-composer/lens-composer.html">
+    <link rel="import" href="/bower_components/lens-node/lens-node.html">
+
   </head>
   <body>
     {{{body}}}
